fix for horizontal scroll on general content hero.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -496,10 +496,10 @@ main div.section.mobile {
 
     .page-title {
         position: absolute;
-        left: 20px;
+        left: 0;
         bottom: 0;
         text-shadow: 0 2px 0.99px rgb(0 0 0 / 90%);
-        padding: 0 15px;
+        padding: 0 24px;
         color: var(--neutral-white);
     }
 
